@@ -7,6 +7,10 @@
                                   Changelog
 
 
+Daniel (28 July 2005)
+- If any of the options CURLOPT_HTTPGET, CURLOPT_POST and CURLOPT_HTTPPOST is
+  set to 1, CURLOPT_NOBODY will now automatically be set to 0.
+
 Daniel (27 July 2005)
 - Dan Fandrich changes over the last week: fixed numerous minor configure
   option parsing flaws: --without-gnutls, --without-spnego --without-gssapi
